--- a/backOffice/style.css
+++ b/backOffice/style.css
@@ -1,4 +1,7 @@
 .modal-content {
-    background-color: #472D2D;
-    color: white;
+    background-color: #5C4033;
+}
+
+nav {
+    background-color: #5C4033;
 }
