--- a/backOffice/style.css
+++ b/backOffice/style.css
@@ -1,7 +1,12 @@
 .modal-content {
-    background-color: #5C4033;
+    background-color: #425664;
+    color: #F6F4F2;
 }
 
 nav {
-    background-color: #5C4033;
+    background-color: #425664;
+}
+
+body {
+    background-color: #F6F4F2;
 }
