--- a/front/src/style/globalStyle.css
+++ b/front/src/style/globalStyle.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Rubik;
-    src: url(/Users/beatricezamagna/Desktop/Animal/front/src/font/Rubik/static/Rubik-Light.ttf);
+    src: url(../font/Rubik/Rubik-VariableFont_wght.ttf);
 }
 
 * {
